[package]
name = "pegasos"
version = "0.1.0"
authors = ["Pauli Jaakkola <pauli.jaakkola@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rustyline = "6.0.0"

[dependencies.rand]
version = "0.7"
features = ["small_rng"]

